Fixed menu on mobile view

--- a/src/scss/base/_var.scss
+++ b/src/scss/base/_var.scss
@@ -8,6 +8,8 @@ $top-bar-icon-color: rgba(255, 255, 255, .38);
 $top-bar-hover-color: #FFFFFF;
 $primary-button-text-color: #FFD700;
 $secondary-text: rgba(0, 0, 0, 0.6);
+$dimmer-color: rgba(26, 10, 31, .9);
+$inactive-menu-item-color: #967faf;
 
 $font-stack: (Segoe UI, Helvetica Neue, Arial, sans-serif);
 $secondary-font-stack: (Segoe UI Semibold, Helvetica Neue, Arial, sans-serif);
